src/validation/tests/snapshots/rusty__validation__tests__assignment_validation_tests__action_call_parameters_are_only_validated_outside_of_parent_pou_contexts.snap
---
source: src/validation/tests/assignment_validation_tests.rs
expression: diagnostics
---
error[E030]: Argument `arr` is missing
   ┌─ <internal>:33:13
   │
33 │             fb.bar(); // INVALID - we are not in the parent context and while we use a qualified call, we don't know if the variable has been initialized
   │             ^^^^^^ Argument `arr` is missing
